# MasterDnsVPN

./: .coveragerc  .gitignore  .pylintrc  build_setup.py  client.py  client_config.toml.simple  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  server_config.toml.simple
.github/workflows/: build-go.yml  test.yml
cmd/client/: versioninfo.json
cmd/server/: versioninfo.json
dns_utils/: ARQ.py  DNSBalancer.py  DNS_ENUMS.py  DnsPacketParser.py  config_loader.py  utils.py
internal/arq/: arq.go  arq_test.go  scheduler.go
internal/basecodec/: lowerbase32.go  lowerbase32_test.go
internal/client/: balancer.go  client.go  client_test.go  client_utils.go  dispatcher.go  dns_async.go  local_dns.go  local_dns_cache_persistence.go  local_dns_handler.go  mtu.go  mtu_logging.go  mtu_test.go  resolver_health.go  server_packets.go  session.go  socks_manager.go  stream0_runtime.go  stream_client.go  stream_handshake.go  stream_resolver.go  stream_runtime.go  tunnel_runtime.go  validation.go
internal/config/: client.go  client_resolvers.go  client_resolvers_test.go  client_test.go  server.go
internal/dnscache/: store.go
internal/dnsparser/: transport.go
internal/domainmatcher/: matcher.go  matcher_test.go
internal/enums/: dns.go  dns_names.go  dns_test.go  (+3 more)
tests/: conftest.py  test_arq.py  test_client.py  test_compression.py  test_config_loader.py  test_dns_balancer.py  test_dns_enums.py  test_dns_packet_parser.py  test_init.py  test_packet_queue_mixin.py  test_ping_manager.py  test_prepend_reader.py  test_server.py  test_utils.py
(+15 files in other folders)
