[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "masterdnsvpn"
version = "1.0.0"
description = "DNS tunneling VPN that encapsulates TCP traffic in DNS queries to bypass censorship"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "cryptography>=41.0.0",
    "zstandard>=0.22.0",
    "lz4>=4.3.2",
    "tomli; python_version < '3.11'",
    "uvloop; sys_platform != 'win32'",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
